# cns

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md  TODO  coverage_create_report.sh  coverage_delete_gcda.sh
examples/playground/: CMakeLists.txt  main.cxx
src/: CMakeLists.txt  main.cxx
src/cns/: CMakeLists.txt  cns.ixx
src/cns/math/: cns.math-matrix.cxx  cns.math-matrix.ixx  cns.math-vector.cxx  cns.math-vector.ixx  cns.math.ixx
tests/: .clang-tidy  CMakeLists.txt
tests/cns/math/: cns.math-matrix.cxx  cns.math-vector.cxx
